--- a/03-javascript_20ener/ejercicios/T3/css/styles.css
+++ b/03-javascript_20ener/ejercicios/T3/css/styles.css
@@ -17,3 +17,47 @@
   display: inline;
   width: 20%;
 }
+.mostrar_10 {
+  display: flex;
+  width: 200px;
+  height: 200px;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+}
+.mostrar_10c {
+  display: flex;
+  width: 200px;
+  height: 200px;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../img/apagada.gif);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.ampolleta {
+  /* width: 40%;
+  height: 100%; */
+  background-image: url(../img/apagada.gif);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.ampolleta2 {
+  /* width: 40%;
+  height: 100%; */
+  background-image: url(../img/encendida.gif);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.ampolleta3 {
+  display: flex;
+  width: 200px;
+  height: 200px;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../img/encendida.gif);
+  background-repeat: no-repeat;
+  background-position: center;
+}
