--- a/03-javascript_20ener/ejercicios/T4/css/formulari.css
+++ b/03-javascript_20ener/ejercicios/T4/css/formulari.css
@@ -1,3 +1,7 @@
+body {
+  width: 80%;
+  margin: auto;
+}
 .verificado {
   border: 2px solid green;
 }
@@ -5,7 +9,22 @@
   content: "✔";
   color: green;
 }
-
+.campo_horizontal {
+  display: flex;
+  width: 80%;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+.campo_horizontal #terminos_usuario {
+  width: 10%;
+}
+div#error,
+div#error2 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+}
 .noverificado {
   border: 2px solid red;
 }
@@ -13,7 +32,6 @@
   content: "✘";
   color: red;
 }
-
 .limpia::before {
   content: none;
   color: none;
@@ -24,6 +42,11 @@ fieldset {
   margin: auto;
   display: flex;
   flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+}
+label {
+  width: 40%;
 }
 input {
   width: 40%;
@@ -49,5 +72,6 @@ label#anio2 {
   width: 30%;
 }
 button {
-  width: 20%;
+  width: 16%;
+  margin: 0 1rem;
 }
